# eink-rss-reader

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: docker.yml
app/: config.py  database.py  main.py  models.py
app/routers/: api.py  pages.py
app/services/: crud.py  feed.py  scheduler.py
app/templates/: article.html  base.html  error.html  feed_detail.html  feeds.html  home.html  settings.html
static/: style.css
tests/: conftest.py  test_database.py  test_feed_service.py  test_routes.py
